force-app/main/default/objects/Integration_Error_Log__c/Integration_Error_Log__c.object-meta.xml
<CustomObject>
    <label>Integration Error Log</label>
    <nameField>
        <displayFormat>INT-ERR-{000000}</displayFormat>
        <label>Integration Error Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>