force-app/main/default/objects/Integration_Error_Log__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Callout_Exception</fullName>
            </value>
            <value>
                <fullName>Timeout</fullName>
            </value>
            <value>
                <fullName>Auth_Failure</fullName>
            </value>
            <value>
                <fullName>Mapping_Error</fullName>
            </value>
            <value>
                <fullName>Validation_Error</fullName>
            </value>
            <value>
                <fullName>Governor_Limit</fullName>
            </value>
            <value>
                <fullName>DML_Error</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>