force-app/main/default/objects/Integration_Error_Log__c/fields/Integration_Log__c.field-meta.xml
<CustomField>
    <fullName>Integration_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration Log</label>
    <referenceTo>Integration_Log__c</referenceTo>
    <relationshipLabel>Integration Error Logs</relationshipLabel>
    <relationshipName>Integration_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>