force-app/main/default/objects/Integration_Error_Log__c/fields/Is_Dead_Letter__c.field-meta.xml
<CustomField>
    <fullName>Is_Dead_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flagged for dead letter queue</description>
    <label>Is Dead Letter</label>
    <type>Checkbox</type>
</CustomField>