force-app/main/default/objects/Integration_Error_Log__c/fields/Original_Payload__c.field-meta.xml
<CustomField>
    <fullName>Original_Payload__c</fullName>
    <description>Preserved payload for retry</description>
    <label>Original Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>