force-app/main/default/objects/Integration_Error_Log__c/fields/Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Date__c</fullName>
    <label>Resolved Date</label>
    <type>DateTime</type>
</CustomField>