force-app/main/default/objects/Integration_Error_Log__c/fields/Retry_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Retry_Eligible__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Retry Eligible</label>
    <type>Checkbox</type>
</CustomField>